--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -10,6 +10,7 @@
 		"48": "images/icon-48.png",
 		"128": "images/icon-128.png"
 	},	
+	"background_page": "background.html",
 	"browser_action": {
 		"default_icon": "images/icon.png",
 		"default_title": "Ananke",
