--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name":"Ananke",
+	"name":"Ananke Timer",
 	"version": "1.2",
 	"description": "Ananke Timer",
 	"options_page": "options.html",
